@@ -57,7 +57,16 @@ class InfoPane(gtk.VBox):
 
     def __init__(self, main_view, infos):
         assert isinstance(infos, tuple) and len(infos) == 2
-        hardware_subtree_functions, os_subtree_functions = infos
+        assert isinstance(infos[0], list)
+        assert isinstance(infos[1], list)
+        hardware_functions, os_functions = infos
+        self.hardware_functions = hardware_functions
+        self.os_functions = os_functions
+        for func in hardware_functions:
+            func.result = func()
+        for func in os_functions:
+            func.result = func()
+        
         self.hardware_subtree_text = _('Hardware Information')
         self.hardware_subtree_icon = get_pixbuf(D + 'sora_icons/m_hardware.png', 24, 24)
         self.os_subtree_text = _('Linux Information')
@@ -93,35 +102,34 @@ class InfoPane(gtk.VBox):
         self.pack_start(scrollwindow)
         self.pack_start(align_button, False)
         
-        self.function2trees = {} # map function to the lines which appear in treeview
-        
-        parent = self.treestore.append(None, [self.hardware_subtree_icon, self.hardware_subtree_text, None])
-        self.__build_subtree(parent, hardware_subtree_functions)
-        parent = self.treestore.append(None, [self.os_subtree_icon, self.os_subtree_text, None])
-        self.__build_subtree(parent, os_subtree_functions)
-
-        self.treeview.expand_all()
+        self.refresh()
 
         import gobject
         gobject.timeout_add(5000, self.refresh)
     
-    def __build_subtree(self, tree, functions):
-        for function in functions:
-            rows = function() # some function may returns many lines
-            trees = self.function2trees[function] = []
-            for row in rows:
-                pixbuf = get_information_pixbuf(row[2], 24, 24)
-                t = self.treestore.append(tree, [pixbuf, row[0], row[1]])
-                trees.append(t)
-        
     def refresh(self):
-        for function in self.function2trees.keys():
-            if hasattr(function, 'please_refresh_me'):
-                rows = function()
-                if rows: # If function() fail, rows == [].
-                    index = 0
-                    for tree in self.function2trees[function]:
-                        row = rows[index]
-                        self.treestore.set_value(tree, 2, row[1])
-                        index += 1
+        for func in self.hardware_functions:
+            if hasattr(func, 'please_refresh_me'):
+                func.result = func()
+
+        for func in self.os_functions:
+            if hasattr(func, 'please_refresh_me'):
+                func.result = func()
+
+        self.treestore.clear()
+        
+        subtree_root = self.treestore.append(None, [self.hardware_subtree_icon, self.hardware_subtree_text, None])
+        for func in self.hardware_functions:
+            for row in func.result:
+                pixbuf = get_information_pixbuf(row[2], 24, 24)
+                self.treestore.append(subtree_root, [pixbuf, row[0], row[1]])
+                
+        subtree_root = self.treestore.append(None, [self.os_subtree_icon, self.os_subtree_text, None])
+        for func in self.os_functions:
+            for row in func.result:
+                pixbuf = get_information_pixbuf(row[2], 24, 24)
+                self.treestore.append(subtree_root, [pixbuf, row[0], row[1]])
+
+        self.treeview.expand_all()
+
         return True
